# presale

./: .gitignore  Anchor.toml  Cargo.toml  presale.rs
app/: package.json
app/pages/: _app.js  index.js
config/: lib.rs  sale.rs
programs/sale/: Cargo.toml
programs/sale/src/: lib.rs
rust/: presale.rs  saleV2.rs  vesting.rs
solidity/: Presale.sol  project_name.sol
src/: lib.rs
tests/: project_name.ts  sale.ts
vesting/: vesting.rs
